--- a/index.html
+++ b/index.html
@@ -11,43 +11,19 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="viewport">
-            <div class="control left-arrow">
-                <i class="fas fa-arrow-left"></i>
-            </div>
-            <div class="cube cube-1">
-                <div class="face front"></div>
-                <div class="face back"></div>
-                <div class="face top"></div>
-                <div class="face bottom"></div>
-                <div class="face left"></div>
-                <div class="face right"></div>
-            </div>
-            <div class="cube cube-2">
-                <div class="face front"></div>
-                <div class="face back"></div>
-                <div class="face top"></div>
-                <div class="face bottom"></div>
-                <div class="face left"></div>
-                <div class="face right"></div>
-            </div>
-            <div class="cube cube-3">
-                <div class="face front"></div>
-                <div class="face back"></div>
-                <div class="face top"></div>
-                <div class="face bottom"></div>
-                <div class="face left"></div>
-                <div class="face right"></div>
-            </div>
-            <div class="control right-arrow">
-                <i class="fas fa-arrow-right"></i>
-            </div>
-            <div class="control play-pause">
-                <i class="fas fa-play"></i>
+    <div class="Container">
+        <div class="Circle1">
+            1
+            <div class="Circle2">
+                2
+                <div class="Circle3">
+                    3
+                </div>
             </div>
         </div>
+
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
